fixed invitaion mobile UI

--- a/src/Components/Invitation/styles.css
+++ b/src/Components/Invitation/styles.css
@@ -79,7 +79,7 @@ label {
 
 .add-event {
   position: relative;
-  width: 100%;
+  /* width: 1m; */
   height: 150px;
   padding: 20px;
   margin-left: 5px;
@@ -90,8 +90,9 @@ label {
 }
 
 .event-form {
-  width: 100%;
+  width: 40vw;
   height: 40px;
+  /* flex: 1; */
   
   background: #FFFFFF 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
@@ -154,7 +155,7 @@ label {
 }
 
 .date {
-  
+  width: 20vw;
   height: 35px;
   padding: 10px;
   background: #FFFFFF 0% 0% no-repeat padding-box;
@@ -164,7 +165,7 @@ label {
 }
 
 .time {
-  
+  width: 20vw;
   height: 35px;
   padding: 10px;
   background: #FFFFFF 0% 0% no-repeat padding-box;
@@ -174,7 +175,8 @@ label {
 }
 
 .venue {
-  width: 100%;
+  /* width: 100%; */
+  width: 40vw;
   height: 35px;
   background: #FFFFFF 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
@@ -183,7 +185,7 @@ label {
 }
 
 .venue-address {
-  width: 100%;
+  width: 40vw;
   height: 70px;
   padding: 10px;
   background: #FFFFFF 0% 0% no-repeat padding-box;
@@ -234,9 +236,10 @@ label {
 }
 
 .list-container {
-  display: flex;
+  /* display: flex; */
   flex-direction: row;
-  flex: 1;
+  /* flex: 1; */
+  /* width: 80vw; */
   justify-content: space-between;
 }
 
@@ -288,8 +291,8 @@ th {
 }
 
 .event-groups {
-  margin-right: 5px;
-  margin-top: 20px;
+  width: 100%;
+  margin-top: -50px;
   padding: 20px;
   background: #F7F7F7 0% 0% no-repeat padding-box;
   border-radius: 22px;
@@ -312,4 +315,24 @@ section {
 .modal-buttons {
   flex-direction: row;
   
+}
+.date-time {
+  /* flex-wrap: wrap; */
+}
+
+
+.table-responsive-wedlite {
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+@media (min-width: 600px) { 
+  .event-groups {
+    width: 30%
+    
+  }
+  .table-responsive-wedlite {
+    width: 70%;
+    margin-bottom: 50px;
+  }
 }
